<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ScrollView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:context=".MainActivity"
    android:foregroundGravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:gravity="center">

            <!--Put form controls here -->

            <ImageView
                    android:id="@+id/imageLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/logodesc"
                    android:padding="10dp"
                    android:src="@drawable/ic_logo"
                android:layout_alignRight="@+id/ButtonCalc" />

            <Spinner android:id="@+id/type" android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:contentDescription="@string/type"
                     android:entries="@array/typelist" android:prompt="@string/type"
                     android:layout_below="@+id/imageLogo"
                android:layout_alignRight="@+id/ButtonCalc" />

            <TextView
                android:id="@+id/txtTA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_TotAssets"
                android:text="@string/total_assets"
                android:layout_below="@+id/type"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/Edit_TotAssets"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_CurAssets"
                android:text="@string/current_assets"
                android:layout_below="@+id/txtTA"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/Edit_CurAssets"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_TotAssets"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtINV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_INV"
                android:text="@string/INV"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/Edit_INV"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_CurAssets"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtTD"
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_TotDebt"
                android:text="@string/total_debt"
                android:layout_below="@+id/txtINV"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/Edit_TotDebt"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_INV"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtCD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_CurDebt"
                android:text="@string/current_liabilities"
                android:layout_below="@+id/txtTD"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_toLeftOf="@+id/Edit_CurDebt"
                android:layout_toStartOf="@+id/Edit_CurDebt"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/Edit_CurDebt"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_TotDebt"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="false" />

            <TextView
                android:id="@+id/txtE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_Equity"
                android:text="@string/equity"
                android:layout_below="@+id/txtCD"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/Edit_Equity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_CurDebt"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberSigned|numberDecimal"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txtRE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_RetEar"
                android:text="@string/retained_earnings"
                android:layout_below="@+id/txtCD"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/Edit_RetEar"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_CurDebt"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:id="@+id/txtEBIT"
                android:layout_width="250px"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_Ebit"
                android:text="@string/ebit"
                android:layout_below="@+id/txtRE"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/Edit_Ebit"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_RetEar"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:id="@+id/txtPBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_PBT"
                android:text="@string/PBT"
                android:layout_below="@+id/txtRE"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:enabled="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/Edit_PBT"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_Ebit"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberSigned|numberDecimal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_Sales"
                android:text="@string/sales"
                android:layout_below="@+id/txtPBT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText android:id="@+id/Edit_Sales"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_PBT"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal"
                android:visibility="gone" />
            <TextView
                android:id="@+id/txtDepn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Edit_Depn"
                android:text="@string/depn"
                android:layout_below="@+id/txtSales"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText android:id="@+id/Edit_Depn"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edit_Sales"
                android:layout_toRightOf="@+id/txtRE"
                android:inputType="numberDecimal"
                android:visibility="gone" />

            <Button android:id="@+id/ButtonCalc" android:layout_height="wrap_content"
                android:text="@string/calculate" android:onClick="calculateZ"
                android:layout_width="fill_parent"
                android:layout_marginTop="17dp"
                android:layout_below="@+id/Edit_Depn"
                android:layout_alignRight="@+id/Edit_Depn" />

        <TextView
            android:id="@+id/textCredits"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/helptext"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/ButtonCalc"
            android:layout_alignRight="@+id/ButtonCalc" />

    </RelativeLayout>


</ScrollView>